0. Сортировка [#10096 #176822]